--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                         <div class="icon">
                            <i class="fa fa-globe-europe"></i>
                            <h4>Website</h4>
-                           <p>www.Sahil.com</p>
+                           <p>www.sahil.com</p>
                         </div>
                       </div>
                       <!-- Contact info item end -->
